tests/NormalTests/paczka1/small_fuzzy/35981909.err
Error in line 6: MPJ A36 14,8
Error in line 11: M0fOrkEJTtG A878 94,7
Error in line 8: MPJ A695 91,7
